--- a/catalog.html
+++ b/catalog.html
@@ -310,6 +310,11 @@
 							<a href="#" class="buy">Купить в 1 клик</a>
 						</div>
 					</div>
+                    <ul class="pagination flex jcc mt">
+                        <li><a href="#" class="active">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                    </ul>					
 				</div>
 			</div>
 			<div class="adv">
