--- a/contacts.html
+++ b/contacts.html
@@ -223,7 +223,7 @@
 							<p>г. Воронеж, ул. Чебышева 5, офис 1.</p>
 						</div>
 						<div class="map">
-							<img src="images/map.png" alt="">
+							<iframe src="https://yandex.ua/map-widget/v1/-/CCuqiF1f" width="100%" height="383" frameborder="1" allowfullscreen="true"></iframe>
 						</div>
 					</div>
 				</div>
