--- a/vakancy.html
+++ b/vakancy.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/lightgallery.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/lightslider.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 
 	<script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
@@ -492,5 +493,33 @@
 			</div>
 		</footer>
 	</div>
-	
+<div style="display:none;">
+    <div id="modal_otklik" class="modal_oc" style="display: block;">
+        <div class="modal_oc-ttl">Откликнуться</div>
+        <div class="modal_oc-form">
+            <form action="">
+                <div class="modal_oc-form-in">
+                    <input type="text" placeholder="Имя">
+                </div>                        
+                <div class="modal_oc-form-in">
+                    <input type="text" placeholder="+7 923 55">
+                </div> 
+                <div class="modal_oc-form-btn">
+                    <button type="submit"><span>Отправить отклик</span></button>
+                </div>                        
+            </form>
+        </div>
+    </div>    
+</div> 
+	<script src="fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script>
+    jQuery(document).ready(function($){	
+
+        $(".vakancy .to").fancybox({ 
+            href: '#modal_otklik', 
+            wrapCSS: 'modal_oc_wp'
+        });  
+        
+    });    
+    </script>
 </body>
